--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>dogs </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Web Page</title>
+  <link rel="stylesheet" type="text/css" href="front.css">
+</head>
+<body>
+  <h1>Welcome to My Web Page</h1>
+  <button id="clickMeButton">Click Me!</button>
+  
+  <h2> there are angels and apricots </h2>
+
+  <script src="front.js"></script>
+</body>
+</html>
