--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
   <link rel="stylesheet" type="text/css" href="front.css">
 </head>
 <body>
-  <h1>Welcome to My Web Page</h1>
-  <button id="clickMeButton">Click Me!</button>
+  <h1>FRONTIER BARN</h1>
+  <br/>
+  <br/>
+<form action="/search" method="GET">
+  <label for="search-input" class="sr-only">Search</label>
+  <input type="search" id="search-input" name="query" placeholder="Search...">
+  <button type="submit">Search</button>
+</form>
   
-  <h2> there are angels and apricots </h2>
+ 
 
   <script src="front.js"></script>
 </body>
 </html>
+
