--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>FRONTIER BARN</h1>
   <br/>
   <br/>
-<form action="/search" method="GET">
+<form action="" onsubmit="event.preventDefault();" method="GET">
   <label for="search-input" class="sr-only">Search</label>
   <input type="search" id="search-input" name="query" placeholder="Search...">
   <button type="submit">Search</button>
